update code with snippets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
     <nav>
-        <a>Logo</a>
+        <a (click)="profile()">Logo</a>
         <a>Products</a>
         <a>About</a>
         @if(isAuthenticated()) {
