--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,3 +21,11 @@ nav a {
 	margin: 10px;
     cursor: pointer;
 }
+
+
+.even-todo-item {
+    background-color: bisque;
+  }
+  .odd-todo-item {
+    background-color: whitesmoke;
+  }
